Updated ignore file.
Now ignores generated output files from Visual Studio.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,11 @@
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
+*.sln
+*.xml
+*.vcxproj
+*.vcxproj.filters
+*.vsarduino.h
 
 # Build results
 [Dd]ebug/
